# FixItGarage

./: .gitignore  ACCOUNTS_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  F-DROID.md  PLAY.md  PRIVACY.md  README.md  SECURITY.md  STORE.md  gradlew  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/org/fixitgarage/app/: FixItGarageApp.kt  MainActivity.kt
app/src/main/java/org/fixitgarage/app/data/dao/: Daos.kt
app/src/main/java/org/fixitgarage/app/data/db/: AppDatabase.kt
app/src/main/java/org/fixitgarage/app/data/entity/: Entities.kt
app/src/main/java/org/fixitgarage/app/data/repository/: UserPreferencesRepository.kt  VehicleRepository.kt
app/src/main/java/org/fixitgarage/app/domain/model/: UserMode.kt
app/src/main/java/org/fixitgarage/app/ui/components/: CommonUi.kt
app/src/main/java/org/fixitgarage/app/ui/navigation/: AppDestinations.kt
app/src/main/java/org/fixitgarage/app/ui/screens/: FeaturePlaceholders.kt
app/src/main/java/org/fixitgarage/app/ui/screens/costs/: CostsScreen.kt
app/src/main/java/org/fixitgarage/app/ui/screens/home/: HomeScreen.kt
app/src/main/java/org/fixitgarage/app/ui/screens/maintenance/: MaintenanceScreen.kt
app/src/main/java/org/fixitgarage/app/ui/screens/ocr/: OcrScreen.kt
app/src/main/java/org/fixitgarage/app/ui/screens/parts/: PartsScreen.kt
app/src/main/java/org/fixitgarage/app/ui/screens/settings/: SettingsScreen.kt
app/src/main/java/org/fixitgarage/app/ui/screens/tires/: TiresScreen.kt
app/src/main/java/org/fixitgarage/app/ui/screens/vehicles/: VehiclesScreen.kt
app/src/main/java/org/fixitgarage/app/ui/screens/wizard/: SetupWizardScreen.kt
app/src/main/java/org/fixitgarage/app/ui/theme/: Theme.kt  Type.kt
app/src/main/java/org/fixitgarage/app/util/: CsvExporter.kt  MpgCalculator.kt  ReminderScheduler.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/fixitgarage/app/: MpgCalculatorTest.kt
brand/: README.md
docs/: donate.html  index.html
docs/css/: site.css
metadata/: org.fixitgarage.app.yml
metadata/en-US/: full_description.txt  short_description.txt  title.txt
metadata/en-US/changelogs/: 211.txt  215.txt  216.txt  217.txt  218.txt  219.txt  22.txt  220.txt  221.txt  222.txt  223.txt  224.txt  225.txt  226.txt  227.txt  228.txt  229.txt  230.txt  231.txt  29.txt
rust/: Cargo.toml  F-DROID.md  README.md
rust/.cargo/: config.toml
rust/fixitgarage-cli/: Cargo.toml
rust/fixitgarage-cli/src/: main.rs
rust/fixitgarage-core/: Cargo.toml
rust/fixitgarage-core/src/: cost.rs  csv_export.rs  error.rs  lib.rs  models.rs  mpg.rs  reminders.rs  tires.rs
rust/fixitgarage-ui/: Cargo.toml  README.md  manifest.yaml
rust/fixitgarage-ui/android/: AndroidManifest.xml
rust/fixitgarage-ui/android/java/org/fixitgarage/app/: BootReceiver.java  ShareReceiveActivity.java  StorageHelper.java
rust/fixitgarage-ui/android/res/xml/: data_extraction_rules.xml  file_paths.xml
rust/fixitgarage-ui/models/: README.md  download-models.sh
rust/fixitgarage-ui/src/: i18n.rs  lib.rs  main.rs  ondevice_ocr.rs  platform.rs  recalls.rs  receipt_parse.rs  seller_packet.rs  state.rs  title_parse.rs  tread_cv.rs  units.rs  webdav.rs
rust/fixitgarage-ui/ui/: app.slint
rust/fixitgarage-ui/ui/fonts/: README.txt
rust/scripts/: build-apk.sh  build-play-aab.sh  build-play-apk.sh  create-upload-keystore.sh  install-on-emulator.sh  package-apk-with-boot.sh  publish-github-release.sh  release-apks.sh  setup-emulator-debian13.sh  sign-play-aab.sh  start-emulator.sh  verify-aab-parity.sh
