[workspace]
resolver = "2"
members = [
    "fixitgarage-core",
    "fixitgarage-cli",
    "fixitgarage-ui",
]

[workspace.package]
version = "0.2.14"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/linuxbased79/FixItGarage"
authors = ["linuxbased79"]

[workspace.dependencies]
fixitgarage-core = { path = "fixitgarage-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
