[package]
name = "fixitgarage-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FixItGarage mobile/desktop UI in Rust (Slint) — GrapheneOS & F-Droid oriented"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "fixitgarage_ui"

[[bin]]
name = "fixitgarage-ui"
path = "src/main.rs"

[features]
default = ["desktop"]
# Desktop backends (winit). Disable when targeting only Android if desired.
desktop = []
# Android via android-activity 0.6 (Slint official mobile path).
android = ["slint/backend-android-activity-06"]

[dependencies]
fixitgarage-core = { workspace = true }
slint = { version = "1.17", default-features = true, features = ["backend-android-activity-06"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dirs = "6"
regex = "1"
# Blocking HTTP for WebDAV/Nextcloud backup (TLS via rustls, no OpenSSL)
ureq = { version = "2", default-features = false, features = ["tls"] }
# On-device OCR (pure Rust, no GMS) + image/tread CV
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
imageproc = "0.25"
ocrs = "0.12"
rten = "0.24"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[build-dependencies]
slint-build = "1.17"

# Used by cargo-apk / mobile packagers
[package.metadata.android]
package = "org.fixitgarage.app"
build_targets = ["aarch64-linux-android"]
runtime_libs = []

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 35

[package.metadata.android.application]
label = "FixItGarage"
theme = "@android:style/Theme.DeviceDefault.NoActionBar"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.CAMERA"

[[package.metadata.android.uses_permission]]
name = "android.permission.POST_NOTIFICATIONS"

[[package.metadata.android.uses_permission]]
name = "android.permission.SCHEDULE_EXACT_ALARM"

[[package.metadata.android.uses_permission]]
name = "android.permission.USE_EXACT_ALARM"

